[package]
name = "rusted-battalions-engine"
version = "0.1.0"
description = "Game engine for Rusted Battalions"
authors = ["Pauan <pauanyu+github@pm.me>"]
categories = ["wasm"]
readme = "README.md"
license = "MIT"
edition = "2021"

[features]
thread-safe = []
webgl = ["wgpu/webgl"]

[dependencies]
raw-window-handle = "0.5.2"
wgpu_macros = "0.1.0"
wasm-bindgen-futures = "0.4.37"
futures-signals = "0.3.32"
futures = "0.3.28"
log = "0.4.20"

[dependencies.image]
version = "0.24.7"
default-features = false

[dependencies.bytemuck]
version = "1.13.1"
features = [
    "derive",
]

[dependencies.wgpu]
version = "0.17.0"
features = []
